<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/roundsConfig"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/roundsLb"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/rodadasCfgLb"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/roundsOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/rounds"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/levelConfig"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="65dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/levelLB"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/levelLb"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/levelRGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/level1Rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:checked="true"
                android:text="@string/easyTxt"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/level2Rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0"
                android:text="@string/middleTxt"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/level3Rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0"
                android:text="@string/hardTxt"
                android:textColor="@color/black" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/startGameBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="115dp"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/startTxt" />

</FrameLayout>